# teh_build

./: CMakeLists.txt  NEWBS  NOTES  README  README.md  ToDo  drc_bootstrap.sh  rebuild_package_index
bash/: teh  teh_autocomplete  teh_functions  teh_makeall
cmake/: CMakeLists.txt  SampleBinCMakeLists.txt  SampleLibCMakeLists.txt  libConfig.cmake.in  teh-build-tools-config.cmake  teh-build-tools.cmake  teh-build.cmake
templates/bin_template/: CMakeLists.txt  README.txt
templates/bin_template/src/: drc_demo_bin.c
